@@ -6,8 +6,8 @@ RatePAY GmbH - Magento Payment Module
 |Author | `Aarne Welschlau`
 |Prefix | `pi`
 |Shop Version | `CE` `<= 1.9.x`
-|Version | `2.5.3`
+|Version | `2.5.4`
 |Link | `http://www.ratepay.com`
 |Mail | `integration@ratepay.com`
-|Description | `changes in IBS, DFP and logs view`
+|Description | `CONFIRMATION DELIVERY back to invoice event`
 |Installation | `see separate installation manual`
