@@ -24,7 +24,7 @@
 
     <modules>
         <PayIntelligent_Ratepay>
-            <version>2.5.3</version>
+            <version>2.5.4</version>
         </PayIntelligent_Ratepay>
     </modules>
 
@@ -243,14 +243,14 @@
                 </observers>
             </sales_quote_payment_import_data_before>
 
-            <sales_order_shipment_save_before>
+            <sales_order_invoice_register>
                 <observers>
                     <sendRatepayDeliverCall>
                         <class>ratepay/observer</class>
                         <method>sendRatepayDeliverCall</method>
                     </sendRatepayDeliverCall>
                 </observers>
-            </sales_order_shipment_save_before>
+            </sales_order_invoice_register>
 
             <sales_order_creditmemo_refund>
                 <observers>
