@@ -1,4 +1,11 @@
 ***********************************************************
+**********| Version 2.5.4 - Released 2015-05-13 |**********
+***********************************************************
+
+* CONFIRMATION DELIVERY back to invoice event
+* changed invoice event from save to register
+
+***********************************************************
 **********| Version 2.5.3 - Released 2015-02-27 |**********
 ***********************************************************
 
